# ulibrary_fastapi

./: .gitignore  app.py  config.py  db.py  filter.py  helper.py  pyproject.toml
authors/: crud.py  schemas.py  views.py
book_copy/: crud.py  schemas.py  view.py
books/: crud.py  schemas.py  views.py
borrow/: crud.py  view.py
customer/: crud.py  schemas.py  view.py
models/: __init__.py  book_copies.py  customer.py  order.py  order_item.py  showmodels.py  user.py
students/: crud.py  shemas.py  view.py
