[tool.poetry]
name = "ulibrary-fastapi"
version = "0.1.0"
description = "U_library on FastAPI"
authors = ["HHamlet <hh.harutyunyan@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"
uvicorn = "^0.27.0"
asyncpg = "^0.29.0"
redis = "^5.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
